--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "firebase": "^9.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.43.5",
     "web-vitals": "^1.1.2"
