--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "reselect": "^4.1.5",
     "sass": "^1.43.5",
     "web-vitals": "^1.1.2"
   },
