--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.1.2",
     "reselect": "^4.1.5",
     "sass": "^1.43.5",
+    "vercel": "^23.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
